Fix code wrap and danger block bg

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -35,6 +35,12 @@ h1, h2, h3
     font-size 0.9rem
     text-align right
 
+pre
+  white-space pre-wrap !important
+  white-space -moz-pre-wrap !important
+  white-space -pre-wrap !important
+  white-space -o-pre-wrap !important
+
 pre.tree
   border-left-width 0.5rem
   border-left-style solid
